small fix to Z-index Test

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header {
 }
 
 header h1 {
-  font-size: 10vw;
+  font-size: 7vw;
   padding-top: 15px;
   padding-left: 15px;
   border-top: 2px dotted #f39c12;
@@ -69,7 +69,7 @@ header h1 {
 }
 
 header h2 {
-  font-size: 8vw;
+  font-size: 5vw;
   padding-left: 15px;
   padding-bottom: 15px;
   border-left: 2px dotted #f39c12;
@@ -265,27 +265,16 @@ header:hover::before {
 
 /* Participation */
 .participation {
-  width: 600px;
+  width: 400px;
   height: 400px;
   background: red;
-  transform: skew(-40deg);
-  position: absolute;
-  z-index: 500;
-  right: 30%;
 }
-.participation::before {
-  content: "";
-  width: 600px;
-  height: 400px;
+
+.participation h3 p:first-child {
   background: yellow;
-  margin-left: 25px;
-  margin-top: -25px;
-  position: absolute;
-  z-index: -1;
-  opacity: 0.5;
+  width: 300px;
+  height: 300px;
 }
-
-
 
 
 
